ajout page jeux + début update

--- a/index.html
+++ b/index.html
@@ -10,11 +10,10 @@
 
 
 <body class="bruh"> <!--corps de la page-->
-  <header>
+  <header class="banniere">
 
-    <img src="images/me3.png" alt="Logo du site" width="16%" height="16%"/>
+    <img class="logoheader" src="images/me3.png" alt="Logo du site"/>
     <h1> Little adventuress </h1>
-    <img src="images/flower.png" alt="fleurs" width="8%" height="8%"/>
 
   </header>
 
@@ -24,7 +23,7 @@
 
     <p><a href="projets.html">Projets et hobbys</a></p>
 
-    <!--<p><a href="jeuxvideo.html">Jeux-Vidéos</a></p>-->
+    <p><a href="jeuxvideo.html">Jeux-Vidéos</a></p>
 
     <!--<p><a href="voyages.html">Voyages</a></p>-->
 
@@ -33,10 +32,8 @@
 
 
 <div class="corpspage">
-<p><a href="Never.html" target="_blank"><img class="imgcoin" src="images/encadrefleur.png" alt="imagecoin" width='12%' title="It's a beautiful flower, nah ?"></a></p>
-<img class="imgcoin2" src="images/encadrefleur1.png" alt="imagecoin" width="12%" >
 
-  <h1 class="titrepage">• Bienvenue chers amis •</h1>
+  <h1 class="titrepage">• Bienvenue sur mon site •</h1>
 
 <div class="introductionpage">
   <h3>Je vous souhaite la bienvenue sur mon petit blog ! Ici sera répértorié des petites choses sur ma vie, mes hobbys, et autres.<br/>
