--- a/projets.html
+++ b/projets.html
@@ -10,11 +10,10 @@
 
 
 <body class="bruh"> <!--corps de la page-->
-  <header>
+  <header class="banniere">
 
-    <img src="images/me3.png" alt="Logo du site" width="16%" height="16%"/>
+    <img class="logoheader" src="images/me3.png" alt="Logo du site"/>
     <h1 id="hautpage"> Little adventuress </h1>
-    <img src="images/flower.png" alt="fleurs" width="8%" height="8%"/>
 
   </header>
 
@@ -24,7 +23,7 @@
 
     <p><a href="projets.html" class="pageactuelle">Projets et hobbys</a></p>
 
-    <!--<p><a href="jeuxvideo.html">Jeux-Vidéos</a></p>-->
+    <p><a href="jeuxvideo.html">Jeux-Vidéos</a></p>
 
     <!--<p><a href="voyages.html">Voyages</a></p>-->
 
@@ -34,8 +33,6 @@
 
 <div class="corpspage">
 
-<img class="imgcoin" src="images/encadrefleur.png" alt="imagecoin" width="12%" >
-<img class="imgcoin2" src="images/encadrefleur1.png" alt="imagecoin" width="12%" >
 
   <h1 class="titrepage">• Projets et Hobbys •</h1>
 
@@ -177,7 +174,7 @@ au moins les personnages. C'est pourquoi avec chaque résumé des histoires, j'a
 <p><a href="images/imgdessins/realimg/eleonore1.png" target="_blank"><img src="images/imgdessins/eleonore1mini.png" alt="eleonore1" title="Cliquez pour agrandir !" height="300px"></a></p>
 <p><a href="images/imgdessins/realimg/L&E.png" target="_blank"><img src="images/imgdessins/L&Emini.png" alt="L&E" title="Cliquez pour agrandir !" height="300px"></a></p>
 <p><a href="images/imgdessins/realimg/D&W.png" target="_blank"><img src="images/imgdessins/D&Wmini.png" alt="D&W" title="Cliquez pour agrandir !" height="300px"></a></p>
-
+<p><a href="images/imgdessins/realimg/liana2.png" target="_blank"><img src="images/imgdessins/liana2mini.png" alt="liana2" title="Cliquez pour agrandir !" height="300px"></a></p>
 
 </div>
 <p><a href="#hautpage">- Retourner en haut de la page</a></p>
