--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
 
 
 
-<body class="bruh"> <!--corps de la page-->
-  <header class="banniere">
+<body> <!--corps de la page-->
 
+  <header class="banniere">
+    <!--<p class="iconemaisoncoin"><a href="index.html"><img src="images/icones/icmaison.png" alt="accueil" title="Retour à l'accueil" height="50px"></a></p>-->
     <img class="logoheader" src="images/me3.png" alt="Logo du site"/>
     <h1> Little adventuress </h1>
 
@@ -20,77 +21,55 @@
   <nav>
 
     <p><a href="index.html" class="pageactuelle">Accueil</a></p>
-
     <p><a href="projets.html">Projets et hobbys</a></p>
-
-    <p><a href="jeuxvideo.html">Jeux-Vidéos</a></p>
-
-    <!--<p><a href="voyages.html">Voyages</a></p>-->
+    <!--<p><a href="jeuxvideo.html">Jeux-Vidéo</a></p>-->
+    <p><a href="propos.html">A propos</a></p>
 
   </nav>
 
 
-
-<div class="corpspage">
-
-  <h1 class="titrepage">• Bienvenue sur mon site •</h1>
-
-<div class="introductionpage">
-  <h3>Je vous souhaite la bienvenue sur mon petit blog ! Ici sera répértorié des petites choses sur ma vie, mes hobbys, et autres.<br/>
-     Novice dans l'apprentissage du web et de ses alentours, j'apprends à réaliser ce site avec <a href="https://openclassrooms.com/fr" title="Le site d'OpenClassrooms !" target="_blank">OpenClassrooms</a>.<br/></h3>
-  <h3>Petit à petit, je réalise ce site web, et au fil du temps, de plus en plus de choses s'ajouteront au reste. C'est avec le coeur que je le réalise, et avec plaisir que je partage ici ce que je fais et aime.</h3>
-
-  <div class="warning">
-  <h3>! Des choses changeront en raison de la construction progressive du site, et du terrain d'entrainement qu'il me procure, de ce fait, même le design d'aujourd'hui peut très bien ne plus être celui de demain
-    et donner donc l'impression de changer totalement de site, mais le contenu reste le même, et s'approvisionnera dans le futur !</h3>
-    <h3>! Pas encore très optimisé pour le format téléphone !</h3>
-  </div>
-
+<div class="introduction">
+  <h1 class="titrepage"> Bienvenue sur mon site </h1>
+  <h3>Je vous souhaite la bienvenue ici, un petit site où vous trouverez des petites choses sur ma vie, ainsi que mes activités.<br/>
+     Novice dans l'apprentissage du web et de ses alentours, j'apprends à réaliser ce site avec <a href="https://openclassrooms.com/fr" title="Le site d'OpenClassrooms !" target="_blank">OpenClassrooms</a>.
+  </h3>
+  <h2>► Vous trouverez sur ce site :</h2>
 </div>
 
+<div class="cequevoustrouverez">
 
-<div class="bio">
-
-    <div class="labio">
-      <h2>• Qui suis-je ?</h2>
-      <h4>- Profil du joueur</h4>
-      <ul>
-        <li>NOM : Vergnaud</li>
-        <li>PRENOM : Amélie</li>
-        <li>NOM D'UTILISATEUR : Hasphodelle49</li>
-        <li>XP : 19</li>
-      </ul>
-      <h4>- Zones Importantes</h4>
-      <ul>
-        <li>POINT D'APPARITION : Nantes - France</li>
-        <li>SAUVEGARDE ACTUELLE : Abu Dhabi - Emirats arabes unis</li>
-        <li>FAVORI : Saumur - France</li>
-      </ul>
-      <h4>- Centres d'intérêt </h4>
-      <ul>
-        <li>Dessin</li>
-        <li>Ecriture</li>
-        <li>Lecture</li>
-        <li>Photographie</li>
-        <li>Jeux-vidéos</li>
-      </ul>
+  <a href="projets.html#Projets">
+    <div class="cubelienaccueil">
+      <div class="margincube">
+        <img src="images/icones/projets.png" alt="iconeprojet">
+        <p>• Des projets</p>
+      </div>
     </div>
-
-  <img class="imgpp" src="images/Hasphodelle.png" alt="Photo de profil">
-
-  </div>
-
-<div class="whyweb">
-  <h2>• Pourquoi je fais ce site ?</h2>
-  <p>J'ai décidé de réaliser ce site web, pour m'entrainer dans l'apprentissage des langages web, et particulièrement l'HTML et le CSS sans lesquels je n'aurais pas pu faire tout cela. Bien sûr, je sais que d'autres langages utilisés notamment dans le web viendront s'ajouter à mon panel
-  de connaissances, petit à petit.</p>
-  <p>Ce sont mes amis qui m'ont fait découvrir ces langages, et au fil des leçons, j'y ai pris goût. Maintenant, je consens à utiliser ces compétences acquises ainsi que les prochaines qui s'ajouteront, dans mon projet d'avenir.
-  Même si celui-ci me semble encore flou, l'entonnoir des diversités de parcours professionnels se referme de plus en plus. Je sais que mon métier, encore indéfini à l'heure qu'il est, sera dans le domaine du mutlimédia et internet.</p>
-  <p>Le format "blog" de ce site est plus facile a exploiter pour moi, ayant assez de choses à y mettre, avec un peu de réflexion dans mes souvenirs et mon présent. C'est particulièrement les projets en cours avec mes amis, ou seule, qui me tiennent à coeur, et que je vous laisse découvrir
-    parmis ces pages web, qui elles aussi font partie intégrante de ces projets encore en cours.</p>
-
-</div>
-
+  </a>
+  <a href="projets.html#dessin">
+    <div class="cubelienaccueil">
+      <div class="margincube">
+        <img src="images/icones/graphictablet.png" alt="iconedessin">
+        <p>• Des dessins</p>
+      </div>
+    </div>
+  </a>
+  <a href="projets.html#ecriture">
+    <div class="cubelienaccueil">
+      <div class="margincube">
+        <img src="images/icones/ecriture.png" alt="iconehistoire">
+        <p>• Des histoires</p>
+      </div>
+    </div>
+  </a>
+  <a href="jeuxvideo.html">
+    <div class="cubelienaccueil">
+      <div class="margincube">
+        <img src="images/icones/game.png" alt="iconejeu">
+        <p>• Des jeux-vidéo</p>
+      </div>
+    </div>
+  </a>
 
 </div>
 
@@ -98,10 +77,10 @@
 <footer>
 
 <!--<p><a href="https://www.linkedin.com/feed/" target="_blank"><img src="images/linkedin.png" alt="linkedin" height='100px' title="Vers ma page linkedin !"></a></p>-->
-<p><a href="https://www.picuki.com/profile/hasphotos49" target="_blank"><img src="images/instagram.png" alt="instagram" height='100px'  title="Vers mon compte instagram photos !"></a></p>
-<p><a href="https://www.livraddict.com/profil/hasphodelle/" target="_blank"><img src="images/livraddict.png" alt="livraddict" height='100px' title="Vers mon compte Livraddict !"></a></p>
-<p><a href="https://www.wattpad.com/user/Hasphodelle49" target="_blank"><img src="images/wattpad.png" alt="wattpad" height="100px" title="Vers mon compte Wattpad !"></a></p>
-<p><a href="https://github.com/Hasphodelle49" target="_blank"><img src="images/github.png" alt="github" height="100px" title="Vers mon compte Github !"></a></p>
+<p><a href="https://www.picuki.com/profile/hasphotos49" target="_blank"><img src="images/instagram.png" alt="instagram" title="Vers mon compte instagram photos !"></a></p>
+<p><a href="https://www.livraddict.com/profil/hasphodelle/" target="_blank"><img src="images/livraddict.png" alt="livraddict" title="Vers mon compte Livraddict !"></a></p>
+<p><a href="https://www.wattpad.com/user/Hasphodelle49" target="_blank"><img src="images/wattpad.png" alt="wattpad" title="Vers mon compte Wattpad !"></a></p>
+<p><a href="https://github.com/Hasphodelle49" target="_blank"><img src="images/github.png" alt="github"  title="Vers mon compte Github !"></a></p>
 
 </footer>
 </body>
