--- a/jeuxvideo.html
+++ b/jeuxvideo.html
@@ -9,12 +9,10 @@
 
 
 
-<body class="bruh"> <!--corps de la page-->
+<body> <!--corps de la page-->
   <header class="banniere">
-
     <img class="logoheader" src="images/me3.png" alt="Logo du site"/>
     <h1> Little adventuress </h1>
-
   </header>
 
   <nav>
@@ -25,60 +23,57 @@
 
     <p><a href="jeuxvideo.html" class="pageactuelle">Jeux-Vidéo</a></p>
 
-    <!--<p><a href="voyages.html">Voyages</a></p>-->
+    <p><a href="propos.html">A propos</a></p>
 
   </nav>
 
 
 
-<div class="corpspage">
+<div class="corpspagejeux">
 
-  <h1 class="titrepage">• Jeux-Vidéo •</h1>
 
-  <div class="introductionpage">
+
+  <div class="introduction">
+    <h1 class="titrepage"> Jeux-Vidéo </h1>
     <h3>Ici je répertorie les jeux-vidéo auquels j'aime jouer seule ou avec des amis. J'y présenterais le jeux et mon avis dessus.</h3>
   </div>
 
 <div class="jeux">
-  <h2 class="h2projets">• Minecraft •</h2>
+
 
 <div class="Presentationjeu">
-
   <img src="images/Minecraft.png" alt="Minecraft" height="250px">
-  <ul>
-    <li>Date de sortie : 2011</li>
-    <li>Plateforme Utilisée : PC</li>
-    <li>Type de jeu : bac à sable</li>
-    <li>Mode de jeu : solo, mutlijouer</li>
-    <li>Monde ouvert : OUI</li>
-
-    <li>Site officiel : <a href="https://www.minecraft.net/fr-fr/" target="_blank">https://www.minecraft.net</a> </li>
-  </ul>
-
+  <div class="jeuprésentation">
+    <h4>• Minecraft</h4>
+    <ul>
+      <li>Date de sortie : 2011</li>
+      <li>Plateforme Utilisée : PC</li>
+      <li>Type de jeu : bac à sable</li>
+      <li>Mode de jeu : solo, mutlijouer</li>
+      <li>Monde ouvert : OUI</li>
+      <li>Site officiel : <a href="https://www.minecraft.net/fr-fr/" target="_blank">https://www.minecraft.net</a> </li>
+    </ul>
+  </div>
 </div>
-
 
   <h3>C'est un jeux vidéo de type bac à sable, sorti en 2011. Depuis cette année-là, le jeu ne fait qu'évoluer, de versions en versions, parmi les contrées de cubes du jeu, dont la seule limite n'est que l'imagination du joueur. Possédant un nombre incalculable de mods, de packs de textures, le jeu permet de repousser
 encore plus la limite de l'imagination. Encore aujourd'hui c'est un jeu beaucoup apprécié, ayant une communauté fidèle (et qui déteste les joueurs Fortnite qui critiquent le jeu de moche éwé)</h3>
 <p>► C'est à partir du collège, que j'ai découvert ce jeu, avec lequel j'ai grandi au fil des versions du jeu, avec mes amis, particulièrement. Et encore aujourd'hui, il n'est pas rare que l'on se retrouve sur l'un de nos monde bien conservé, où l'on continue d'ajouter
 de plus en plus de constructions, d'imagination sans limites.</p>
 
-
-
-  <h2 class="h2projets">• Grand Theft Auto V •</h2>
-
 <div class="Presentationjeu">
-
   <img src="images/GTAV.jpg" alt="GTAV" height="250px">
-  <ul>
-    <li>Date de sortie : 2013</li>
-    <li>Plateforme Utilisée : PC</li>
-    <li>Type de jeu : Action-Aventure </li>
-    <li>Mode de jeu : solo, multijoueur</li>
-    <li>Monde ouvert : OUI</li>
-    <li>Site officiel : <a href="https://www.rockstargames.com/V/" target="_blank">https://www.rockstargames.com/V/</a></li>
-  </ul>
-
+  <div class="jeuprésentation">
+    <h4>• Grand Theft Auto V</h4>
+    <ul>
+      <li>Date de sortie : 2013</li>
+      <li>Plateforme Utilisée : PC</li>
+      <li>Type de jeu : Action-Aventure </li>
+      <li>Mode de jeu : solo, multijoueur</li>
+      <li>Monde ouvert : OUI</li>
+      <li>Site officiel : <a href="https://www.rockstargames.com/V/" target="_blank">https://www.rockstargames.com/V/</a></li>
+    </ul>
+  </div>
 </div>
 
   <h3>Communément appelé simplement GTA V, à la grande réputation de jeu interdit aux moins de 18 ans, c'est surtout sur le online que nous nous concentrerons. Basé sur le même monde de jeu, Los Santos,
@@ -88,37 +83,42 @@ diversité très intéressantes, à nous faire presque oublier le côté gangste
 <p>► C'est toujours avec mes amis que je joue, où l'on réalise quelques missions, profite d'une petite promenade en voiture sur l'autoroute à contresens, ou encore en voiture volante (que je suis fière d'avoir gagnée en tournant la roue de la fortune à en faire râler de jalousie les amis éwé).
 C'est un jeu que l'on apprécie beaucoup, même après s'être faits poursuivre par un joueur casseur de bonbons en moto volante (ou Opressor MK2 pour les connaisseurs) ou en avion de chasse.</p>
 
-  <h2 class="h2projets">• Euro Truck Simulator 2 •</h2>
+
 
 <div class="Presentationjeu">
   <img src="images/ETS2.jpg" alt="ETS2" height="250px">
-  <ul>
-    <li>Date de sortie : 2012</li>
-    <li>Plateforme utilisée : PC</li>
-    <li>Type de jeu : simulation</li>
-    <li>Mode de jeu : solo , mutlijoueur (non intégré)</li>
-    <li>Monde ouvert : OUI</li>
-    <li>Site officiel : <a href="https://eurotrucksimulator2.com/" target="_blank">https://eurotrucksimulator2.com/</a> </li>
-  </ul>
-
+  <div class="jeuprésentation">
+      <h4>• Euro Truck Simulator 2</h4>
+      <ul>
+        <li>Date de sortie : 2012</li>
+        <li>Plateforme utilisée : PC</li>
+        <li>Type de jeu : simulation</li>
+        <li>Mode de jeu : solo , mutlijoueur (non intégré)</li>
+        <li>Monde ouvert : OUI</li>
+        <li>Site officiel : <a href="https://eurotrucksimulator2.com/" target="_blank">https://eurotrucksimulator2.com/</a> </li>
+      </ul>
+    </div>
 </div>
 
   <h3>Comme son doux nom l'indique, c'est un simulateur, de camionneur plus précisemment. A l'aide d'un camion et d'une remorque, loués ou achetés, parcourez l'Europe pour faire prospérer l'économie Européenne !
   Avec un multijoueur bourré de surprises par moments ou à la rencontre d'autres joueurs, ajoutez TruckersFM, radio créée spécialement pour le jeu par la communauté multijoueur, parcourez la France, l'Allemagne, le Royaume Unis, et bien plus !</h3>
   <p>► Encore et toujours avec mes amis. Oui. Quelques fois seuls, c'est un jeu que nous trouvons "Chill", apprécié dans les moments plutôt de détente, livraisons après livraisons, bugs après bugs, coincés sur la barrière de sécurité (pas tout le temps, rassurez-vous) avec mon (magnifique) camion rose avec remorque assortie.</p>
 
-  <h2 class="h2projets">• Genshin Impact •</h2>
+
 
 <div class="Presentationjeu">
-<img src="images/Genshin.jpg" alt="GenshinImpact" height="250px">
-<ul>
-  <li>Date de sortie : 2020</li>
-  <li>Plateforme utilisée : PC </li>
-  <li>Type de jeu : Action-aventure-RPG</li>
-  <li>Mode de jeu : solo, multijoueur</li>
-  <li>Monde ouvert : OUI</li>
-  <li>Site officiel : <a href="https://genshin.mihoyo.com/en/home" target="_blank">https://genshin.mihoyo.com</a></li>
-</ul>
+  <img src="images/Genshin.jpg" alt="GenshinImpact" height="250px">
+  <div class="jeuprésentation">
+      <h4>• Genshin Impact</h4>
+      <ul>
+        <li>Date de sortie : 2020</li>
+        <li>Plateforme utilisée : PC </li>
+        <li>Type de jeu : Action-aventure-RPG</li>
+        <li>Mode de jeu : solo, multijoueur</li>
+        <li>Monde ouvert : OUI</li>
+        <li>Site officiel : <a href="https://genshin.mihoyo.com/en/home" target="_blank">https://genshin.mihoyo.com</a></li>
+      </ul>
+    </div>
 </div>
 
 <h3>Un jeu qui a fait beaucoup parlé de lui à ses début, aux teints de RPG supposé devenir MMORPG (Massivement Multijouer Online Role Play Game), une histoire toujours en expension, ainsi que des graphismes ou un gameplay
@@ -127,18 +127,21 @@ inspiré de The Legend of Zelda : Breath of the Wild, vous atterissez en Teyvat,
 bon potentiel, et bien que relativement récent, les mises à jour se poursuivent et ne font qu'améliorer le jeu (c'est le but en même temps...)</p>
 
 
-  <h2 class="h2projets">• The Legend of Zelda : Breath of the Wild •</h2>
+
 
 <div class="Presentationjeu">
   <img src="images/BOTW.jpg" alt="BOTW" height="250px">
-  <ul>
-    <li>Date de sortie : 2017</li>
-    <li>Plateforme utilisée : Wii U</li>
-    <li>Type de Jeu : Action-Aventure</li>
-    <li>Mode de jeu : Solo</li>
-    <li>Monde ouvert : OUI</li>
-    <li>Site officiel : <a href="https://www.zelda.com/breath-of-the-wild/" target="_blank">https://www.zelda.com/breath-of-the-wild/</a> </li>
-  </ul>
+  <div class="jeuprésentation">
+      <h4>• The Legend of Zelda : Breath of the Wild</h4>
+      <ul>
+        <li>Date de sortie : 2017</li>
+        <li>Plateforme utilisée : Wii U</li>
+        <li>Type de Jeu : Action-Aventure</li>
+        <li>Mode de jeu : Solo</li>
+        <li>Monde ouvert : OUI</li>
+        <li>Site officiel : <a href="https://www.zelda.com/breath-of-the-wild/" target="_blank">https://www.zelda.com/breath-of-the-wild/</a> </li>
+      </ul>
+  </div>
 </div>
 
 <h3>Forcément, j'en ai parlé juste avant en titre de comparaison beaucoup critiquée pour Genshin Impact. Tant attendu en 2017, Zelda Breath of the Wild a conquis tout le monde (je l'avais même acheté en pré-commande aussi donc bon). Dans un monde ouvert, et un nouveau gameplay
@@ -147,18 +150,21 @@ qui sort de la routine appréciée des Zelda précédants, c'est dans un monde a
 Ganon, le boss final, on peut totalement améliorer sa tenue, rendre Link plus résistant, mais honnêtement cela ne sert pas à grand chose : j'ai littéralement battu Ganon avec un Link en caleçon. POur le gameplay, il est vraiment bien, il change forcémnent des précedants opus et donne une nouvelle aire à cette série de jeux iconique, qui continue
 de traverser les âges.</p>
 
-<h2 class="h2projets">• The Legend of Zelda : Twilight Princess •</h2>
+
 
 <div class="Presentationjeu">
-<img src="images/TP.jpg" alt="TP" height="250px">
-<ul>
-  <li>Date de sortie : 2006 </li>
-  <li>Plateforme utilisée : Wii puis Wii U</li>
-  <li>Type de Jeu : Action-Aventure</li>
-  <li>Mode de jeu : Solo</li>
-  <li>Monde ouvert : NON</li>
-  <li>Site officiel : pas trouvé</li>
-</ul>
+  <img src="images/TP.jpg" alt="TP" height="250px">
+  <div class="jeuprésentation">
+      <h4>• The Legend of Zelda : Twilight Princess</h4>
+      <ul>
+        <li>Date de sortie : 2006 </li>
+        <li>Plateforme utilisée : Wii puis Wii U</li>
+        <li>Type de Jeu : Action-Aventure</li>
+        <li>Mode de jeu : Solo</li>
+        <li>Monde ouvert : NON</li>
+        <li>Site officiel : pas trouvé</li>
+      </ul>
+    </div>
 </div>
 
 <h3>Ayant parlé du plus récent Zelda juste avant, je devais forcément parler d'un autre jeu de cette même série. Sorti initialement sur GameCube et Wii en 2006, à l'instar de Breath of The wild sorti à la fois sur Wii U et Switch en 2017, puis réadapté en HD sur Wii U, il est l'un des opus également les plus apprécié de la série. Dans un Hyrule plus "Dark" et plus mature,
