--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head> <!--indications de la page-->
   <meta charset="utf-8">
   <link rel="stylesheet" href="style.css">
-  <title>Little Adventuress</title> <!--titre de l'onglet-->
+  <title>Little Adventuress</title> <!--titre de l'ongletnkjhjbkhjbghghjgghgggh-->
   <link rel="icon" type="image/png" href="images/me3.png">
 </head>
 
